# SWAM-Stormworks-Addon-Manager

./: README.md  pyproject.toml
.github/workflows/: build-windows.yml
scripts/: gui_entry.py
swam/: addons.py  backup.py  catalog.py  cli.py  companion.py  geometry.py  guard.py  gui.py  interactive.py  lock.py  mods.py  paths.py  properties.py  savedata.py  scene.py  snapshot.py  verify.py
swam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
swam/companion/: script.lua
tests/: test_core.py
