[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swam"
version = "0.2.0"
description = "Addon and mod manager for existing Stormworks: Build and Rescue saves"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["stormworks", "addon", "mod", "save", "manager"]

[project.scripts]
swam = "swam.cli:main"

[project.gui-scripts]
swam-gui = "swam.gui:main"

[tool.setuptools]
packages = ["swam"]

[tool.setuptools.package-data]
swam = ["companion/*"]
